--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+/* Thanh cuộn dọc */
+.scrollbar-custom::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Phần nền thanh cuộn */
+.scrollbar-custom::-webkit-scrollbar-track {
+  background: #f3f4f6; /* Màu track: gray-100 */
+}
+
+/* Phần nút cuộn */
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background-color: #921573; /* Màu tím bạn dùng */
+  border-radius: 8px;
+}
+
+/* Hover */
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
+  background-color: #7b125f;
 }
