--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,19 @@ body {
 .scrollbar-custom::-webkit-scrollbar-thumb:hover {
   background-color: #7b125f;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 0.2s ease-out forwards;
+}
+
