--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,17 @@ body {
   background-color: #7b125f;
 }
 
+/* globals.css */
+.scrollbar-hide {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE & Edge */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
+
 @keyframes fadeIn {
   from {
     opacity: 0;
